--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "backend server for mangao",
   "license": "ISC",
   "author": "ethan",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon server.js"
+    "start:dev": "nodemon -L server.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
