--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,18 @@
   "license": "ISC",
   "author": "ethan",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon -L server.js"
+    "start:dev": "nodemon --exec 'ts-node' src/server.ts"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.16.0",
+    "nodemon": "^3.1.11",
+    "typescript": "^5.9.3",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
